Add exports and opens to make remaining failing tests pass